--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,1 +1,7 @@
 $black-color: #252525;
+$white-color: #fbfbfb;
+$red-color: #ff5858;
+$grey-color: #afafaf;
+
+$accent-color: #816933;
+$primary-color: #49c1c5;
