--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,14 @@
-<p>header works!</p>
+<header>
+  <div class="container">
+    <h1>Angular Sudoku</h1>
+    <div class="user-block">
+      <p>
+        Ошибок: <strong>{{ 0 }}/3</strong>
+      </p>
+      <nav>
+        <button>Рестарт</button>
+        <button>Решение</button>
+      </nav>
+    </div>
+  </div>
+</header>
