--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,7 +3,7 @@
     <h1>Angular Sudoku</h1>
     <div class="user-block">
       <p>
-        Ошибок: <strong>{{ 0 }}/3</strong>
+        Ошибок: <strong>{{ errorsCount }}/3</strong>
       </p>
       <nav>
         <button>Рестарт</button>
