--- a/src/app/components/cell-input/cell-input.component.html
+++ b/src/app/components/cell-input/cell-input.component.html
@@ -8,5 +8,5 @@
   [ngClass]="{
     error: (error$ | async)
   }"
-  [disabled]="!!(correct$ | async)"
+  [disabled]="!!(correct$ | async) || gameService.isGameOver"
 />
