--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -10,5 +10,13 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
+
+    p {
+      font-size: 24px;
+      font-weight: 700;
+      position: absolute;
+      top: 25px;
+    }
   }
 }
