--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -6,7 +6,7 @@
         Ошибок: <strong>{{ errorsCount }}/3</strong>
       </p>
       <nav>
-        <button>Рестарт</button>
+        <button (click)="gameService.restartGame()">Рестарт</button>
         <button>Решение</button>
       </nav>
     </div>
