--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -1,5 +1,5 @@
 <table [cellSpacing]="0">
-  @for (row of rows; track row) {
+  @for (row of gameService.game.rows; track row) {
   <tr>
     @for (cell of row; track cell.id) {
     <td *ngIf="cell.isShown; else unkn" class="known">{{ cell.value }}</td>
