Make show solution feature

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -7,7 +7,7 @@
       </p>
       <nav>
         <button (click)="gameService.restartGame()">Рестарт</button>
-        <button>Решение</button>
+        <button (click)="gameService.showSolution()">Решение</button>
       </nav>
     </div>
   </div>
